--- a/content/released/5.3.5.md
+++ b/content/released/5.3.5.md
@@ -16,7 +16,7 @@ version: v5.3.5
   * https://assets.secman.dev
   * https://get.secman.dev
   * https://changelog.secman.dev
-- {{< tag changed >}} *Make Secman is self-reliant** [secman#32](https://github.com/secman-team/secman/issues/32) (the most important change), The author of the idea: [@abdfnx][ax]
+- {{< tag changed >}} **Make Secman is self-reliant** [secman#32](https://github.com/secman-team/secman/issues/32) (the most important change), The author of the idea: [@abdfnx][ax]
 - {{< tag changed >}} Change Secman Repo Form
 - {{< tag changed >}} Change Git Config
 - {{< tag changed >}} Move Our website from **next.js** to [**docusaurus**](https://docusaurus.io) [secman.dev#45](https://github.com/secman-team/secman.dev/issues/45), The author of the idea: [@Timothee](https://github.com/Timothee-Cardoso)
